# bewise_test

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 39477ca87866_init.py
src/: __main__.py  main.py
src/api/: exceptions.py
src/api/converters/: user.py
src/api/depends/: base.py  database.py  params.py  permission.py  repository.py  service.py
src/api/routers/: user.py
src/core/: app_container.py  settings.py
src/core/components/: base.py  database.py
src/core/enums/: user.py
src/core/models/: __init__.py  base.py  user.py  user_balance_operation.py
src/repositories/: base.py  user.py  user_balance_operation.py
src/schemas/api/request/: user.py
src/schemas/api/response/: user.py
src/schemas/dto/: user.py  user_balance_operation.py
src/services/: auth.py  exceptions.py  user.py
src/utils/: uow.py
